--- a/ChromePlugin/_locales/zh_CN/messages.json
+++ b/ChromePlugin/_locales/zh_CN/messages.json
@@ -16,11 +16,11 @@
     "description": "默认"
   },
   "contextMenusButton": {
-    "message": "Source IQ",
+    "message": "搜货源",
     "description": "chrome右键菜单按钮名称"
   },
   "projectName": {
-    "message": "Source IQ",
+    "message": "搜货源",
     "description": "项目名称"
   },
   "selectSource": {
